--- a/segsoft2/SegSoft/src/main/resources/application.properties
+++ b/segsoft2/SegSoft/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:csdw1
+spring.datasource.url=jdbc:h2:mem:segsoft
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=redross
 spring.datasource.password=salmonskinroll
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-//spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
+//spring.datasource.url=jdbc:h2:~/segsoft;DB_CLOSE_ON_EXIT=FALSE
 spring.h2.console.enabled=true
 
 server.ssl.key-store=classpath:medium.jks
